// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lists should render correctly (snapshot) 1`] = `
<div>
  <ul
    class="ul"
  >
    List
  </ul>
</div>
`;

exports[`Lists should render correctly (snapshot) 2`] = `
<div>
  <ol
    class="ol"
  >
    List
  </ol>
</div>
`;

exports[`Lists should render correctly (snapshot) 3`] = `
<div>
  <li
    class="item"
  >
    <span
      aria-label="arrow-right"
      class="anticon anticon-arrow-right"
      role="img"
      style="color: rgb(24, 144, 255);"
    >
      <svg
        aria-hidden="true"
        data-icon="arrow-right"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M869 487.8L491.2 159.9c-2.9-2.5-6.6-3.9-10.5-3.9h-88.5c-7.4 0-10.8 9.2-5.2 14l350.2 304H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h585.1L386.9 854c-5.6 4.9-2.2 14 5.2 14h91.5c1.9 0 3.8-.7 5.2-2L869 536.2a32.07 32.07 0 000-48.4z"
        />
      </svg>
    </span>
    <div>
      List
    </div>
  </li>
</div>
`;
